changes made by Akinyemi

--- a/index.html
+++ b/index.html
@@ -15,7 +15,32 @@
     <sectiom class="hero__main"></sectiom>
   </sectiom>
   <!-- The orange section containing check-in info -->
-  <section class="availability"></section>
+  <section class="availability">
+
+   <button class="check_btn"> check-in</button>
+
+   <button class="check_btn"> check-out</button>
+
+<div id="firstdiv">
+
+   <label>Adult</label>
+
+   <input type="number" class="customer_no"></input>
+   </div>
+
+   <div id="seconddiv">
+
+   <label>Children</label>
+
+   <input type="number" class="customer_no"></input>
+   </div>
+
+   </div>
+
+   <button class="availability_btn">CHECK AVAILABILITY</button>
+
+  
+   </section>
   <!-- The about us section -->
   <section class="about-us">
     <h2 id="about">About us</h2>
